# LLM_API_Interaction

./: .gitignore  pyproject.toml  test.py
examples/: run_vote_consolidation.py
llm_library/: __init__.py
llm_library/chains/: structured_output.py
llm_library/clients/: base.py  providers.py
llm_library/parsers/: pydantic_parser.py
llm_library/prompts/: template.py
